Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-25153

CLONE - REGRESSION: QPainter::drawLine() with QPen::FlatCap pen is off-by-one

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 4.8.4
    • 4.8.0, 4.8.1
    • GUI: Painting
    • None
    • Windows Visual Studio 2008
    • 49409f612c47f30434aa809e4d2c963f1a6bb88a (5.0) 54e53d3ca97a30acfcb50eee9d28c93d684753b7 (4.8)

      When drawing lines with same begin and end point with width 0 or 1 when using either flatcap or roundcap style, the point is not drawn in either qt4.8.0 or 4.8.1, while it is drawn in qt 4.5 up to 4.7.

      Since the points in my application are dynamic and sometimes have different y values, in other situations the points can be equal and I still need a visible single dot/pixel as I rely on the behaviour from previous versions.

        For Gerrit Dashboard: QTBUG-25153
        # Subject Branch Project Status CR V

            rodal Samuel Rødal
            dave Dave
            Votes:
            1 Vote for this issue
            Watchers:
            6 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes